@@ -10,6 +10,29 @@
     <h1>The Happy Coot Developer Diary</h1>
 
 <hr>
+<p>Sat 14 Jun 00:57:14 2008 BST
+
+<p>First "restful" week in ages.  Since the start of this year I have
+been to Reading (CCP4 Study Weekend) Abingdon (CCP4 developers
+meeting), Boston (Harvard Medical School, SBGrid Workshop), London
+(CCP4 Working Group II), EBI, Cambridge (Validation Workshop), Oulu,
+Finland (CCP4 Workshop) India (Bangalore (CCP4 Workshop), Chennai
+(Internation Symposium on the Advances in Structural Biology), Beijing
+(CSHL Course-China), Knoxville (ACA), Duke (chez Richardsons).  And
+that has not left me much time to work (or write it up here).  And
+foolish me, I forgot to account for these meetings when I scheduled
+the release of 0.5.  So now 0.5 is way overdue.  And I become anxious
+about hitting the deadline for 1.0. Hmm.  Well maybe I'll just have to
+let it whoosh by...
+
+<p>I always like the ACA, but this year it was particularly quiet, I
+thought.  Not much action at the CCP4 stand.  A few people came over
+and said hello, which I appreciated.
+
+<p>I don't think putting trout in an underground lake is a good idear
+- not for the fish anyway.
+
+<hr>
 <p>Fri 13 Jun 15:20:50 2008 BST
 
 <p>Back from the ACA. I came back from Knoxville with Jane and David
@@ -36,6 +59,14 @@ Hilighting".  This lives in the Extensions for now.  Here is an example:
 
 <p>The Mac build (from May) worked fine. I have not yet gotten around
 to making a stand-alone binary tar from it though.
+
+<p>After coming back from the SBGrid Workshop, I am interested in ray
+tracing and how to get that in to Coot.  There is no easy way to add a
+ray tracer - which is slightly annoying, there are lots of ray tracers
+but none of them fit the bill.  Yafray might be the best of the bunch.
+Its documentation is terrible though.  And it seems to be dead or in
+statis for a couple of years.  Hmm...
+
 
 <hr>
 <p>Tue May 20 20:18:04 BST 2008
@@ -86,7 +117,7 @@ a resolution of the testing problems on the Ubuntu build host.  So
 that is cleaned up at last, hoorah.
 
 <p>I installed Hardy this morning, I am typing this on Hardy now (in
-vi - as I am waiting for xmemacs to download and install).  Also,
+vi - as I am waiting for xemacs to download and install).  Also,
 installing Coot dependencies to see if compiz is compatible with Coot
 yet....
 
@@ -283,7 +314,7 @@ all platforms. Very tedious.
     <address><a href="mailto:paul dot emsley at bioch ox ac uk">Paul Emsley</a></address>
 <!-- Created: Fri Jul 15 09:20:45 BST 2005 -->
 <!-- hhmts start -->
-Last modified: Fri Jun 13 15:39:19 BST 2008
+Last modified: Sat Jun 14 01:16:26 BST 2008
 <!-- hhmts end -->
   </body>
 </html>
